<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/trang_ch" />

    <item
        android:id="@+id/nav_cinema"
        android:icon="@drawable/ic_cinema"
        android:title="@string/rap_phim" />

    <item
        android:id="@+id/nav_mail"
        android:icon="@drawable/ic_ticket"
        android:title="@string/th" />

    <item
        android:id="@+id/nav_chat_bot"
        android:icon="@drawable/ic_chat_bot"
        android:title="@string/chatbot" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/th_ng_b_o" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_person"
        android:title="@string/ng_i_d_ng" />

</menu>
